--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,3 +49,6 @@
 <br>
 <br>
 <app-author-list></app-author-list>
+<br>
+<br>
+<app-toggle [checked]="checks" (checkChange)="onHandleCheckChange($event)" ></app-toggle>
